@@ -1,6 +1,8 @@
 golang-petname (1.8) unreleased; urgency=medium
 
-  * UNRELEASED
+  * debian/control, debian/rules, debian/update-wordlists.sh:
+    - remove build dependency on petname;  only the maintainer
+      ever needs to run update-wordlists
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Dec 2015 16:55:44 -0600
 
